Add put function into doc API and change cache
